added about and footer sections

--- a/src/components/heroStyles.css
+++ b/src/components/heroStyles.css
@@ -1,35 +1,35 @@
 .hero-section {
-    min-height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .fleet-bg {
-    background-image: url('../assets/fleet-bg.jpg');
+  background-image: url("../assets/fleet-bg.jpg");
 }
 
 .individual-bg {
-    background-image: url('../assets/background.jpg');
+  background-image: url("../assets/background.jpg");
 }
 
 .text-after {
-    position: relative;
+  position: relative;
 }
 
 .text-after::after {
-    content: '';
-    position: absolute;
-    top: 150%;
-    left: 65%;
-    background-image: url('../assets/bolt-arrow.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 100%;
+  content: "";
+  position: absolute;
+  top: 150%;
+  left: 65%;
+  background-image: url("../assets/bolt-arrow.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
-@media  screen and (max-width:768px) {
-    .text-after::after {
-        display: none;
-    }
+@media screen and (max-width: 768px) {
+  .text-after::after {
+    display: none;
+  }
 }
