--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,4 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color: rgba(252, 0, 0, 0.87);
-  background-color: #ffffff;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -11,38 +6,38 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #ffffff;
-  text-decoration: inherit !important;
+h1 {
+  font-size: 36px !important;
+}
+
+a,
+.whatsapp_signup__button:hover,
+button:hover {
+  text-decoration: none !important;
 }
 
 a:hover {
-  color: #ffffff;
+  text-decoration: underline !important;
 }
 
-body {
-  margin: 0;
-  min-height: 100vh;
+.graph-icon {
+  font-size: 56px !important;
+  color: #40df6d !important;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.about-section,
+.faq-section,
+.footer-section {
+  max-width: 980px;
+  margin-inline: auto;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
+@media screen and (max-width: 768px) {
+  .img-thumbnail {
+    width: 75% !important;
+  }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  .faq-section {
+    margin-inline: 12px;
+  }
 }
